modify all vendor admin services